--- a/Bloxorz.html
+++ b/Bloxorz.html
@@ -924,12 +924,7 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Bob The Robber .html" class="game-card">
+      <a href="Bob The Robber .html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
         <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
       </div>
@@ -944,6 +939,11 @@ footer a:hover {
         <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
       </div>
       <div class="card-title">Bob The Robber 5</div>
+    </a><a href="Bob The Robber 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 2</div>
     </a><a href="Block Blast.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
         <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
@@ -954,151 +954,151 @@ footer a:hover {
         <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
       </div>
       <div class="card-title">Bad Piggies</div>
-    </a><a href="Gobble.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gobble/thumbnail.jpg')">
-        <img class="thumb" src="games/Gobble/thumbnail.jpg" alt="Gobble" loading="lazy">
+    </a><a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
       </div>
-      <div class="card-title">Gobble</div>
-    </a><a href="Earth Taken.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
-        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
+      <div class="card-title">FNAF 3</div>
+    </a><a href="1v1.lol.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
+        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
       </div>
-      <div class="card-title">Earth Taken</div>
-    </a><a href="Helix Jump.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
-        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
+      <div class="card-title">1v1.lol</div>
+    </a><a href="Bad Time Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
       </div>
-      <div class="card-title">Helix Jump</div>
-    </a><a href="Gun Spin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
-        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
+      <div class="card-title">Bad Time Simulator</div>
+    </a><a href="Crazy Cars.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
       </div>
-      <div class="card-title">Gun Spin</div>
-    </a><a href="Grindcraft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
-        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
+      <div class="card-title">Crazy Cars</div>
+    </a><a href="Crossy Road.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
+        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
       </div>
-      <div class="card-title">Grindcraft</div>
-    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+      <div class="card-title">Crossy Road</div>
+    </a><a href="Deadly Descent.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
+        <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
       </div>
-      <div class="card-title">FNAF Pizzeria Simulator</div>
-    </a><a href="Get Yoked.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
-        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
-      </div>
-      <div class="card-title">Get Yoked</div>
-    </a><a href="Hungry Lamu.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
-        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
-      </div>
-      <div class="card-title">Hungry Lamu</div>
-    </a><a href="Effing Worms.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
-        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
-      </div>
-      <div class="card-title">Effing Worms</div>
-    </a><a href="FNAF 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 2</div>
-    </a><a href="Capybara Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
-        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
-      </div>
-      <div class="card-title">Capybara Clicker</div>
-    </a><a href="FNAF 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 1</div>
-    </a><a href="Dud.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dud/thumbnail.png')">
-        <img class="thumb" src="games/Dud/thumbnail.png" alt="Dud" loading="lazy">
-      </div>
-      <div class="card-title">Dud</div>
-    </a><a href="10 Minutes Till Dawn.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
-        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
-      </div>
-      <div class="card-title">10 Minutes Till Dawn</div>
+      <div class="card-title">Deadly Descent</div>
     </a><a href="Blaze Drifter.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
         <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
       </div>
       <div class="card-title">Blaze Drifter</div>
-    </a><a href="Extreme Run 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
-        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
+    </a><a href="Bounty of One.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
+        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
       </div>
-      <div class="card-title">Extreme Run 3D</div>
-    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
-        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
+      <div class="card-title">Bounty of One</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
-      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
-    </a><a href="Happy Wheels.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
-        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
+      <div class="card-title">Escape Road </div>
+    </a><a href="Highway Racer.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
+        <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer" loading="lazy">
       </div>
-      <div class="card-title">Happy Wheels</div>
+      <div class="card-title">Highway Racer</div>
+    </a><a href="Bitlife.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
+        <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
+      </div>
+      <div class="card-title">Bitlife</div>
+    </a><a href="Age Of War.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
+        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
+      </div>
+      <div class="card-title">Age Of War</div>
     </a><a href="Drift Hunters.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
         <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
       </div>
       <div class="card-title">Drift Hunters</div>
-    </a><a href="Dead Zed 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
       </div>
-      <div class="card-title">Dead Zed 2</div>
-    </a><a href="Clear Vision 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
+      <div class="card-title">FNAF Pizzeria Simulator</div>
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 5</div>
-    </a><a href="Crazy Motorcycle.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
+      <div class="card-title">Drive Mad</div>
+    </a><a href="Henry Stickmin Infiltrating The Airship.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship" loading="lazy">
       </div>
-      <div class="card-title">Crazy Motorcycle</div>
-    </a><a href="Deltarune.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Deltarune/thumbnail.jpg')">
-        <img class="thumb" src="games/Deltarune/thumbnail.jpg" alt="Deltarune" loading="lazy">
+      <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
+    </a><a href="Hover Race Drive.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
       </div>
-      <div class="card-title">Deltarune</div>
-    </a><a href="Happy Room.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
-        <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
+      <div class="card-title">Hover Race Drive</div>
+    </a><a href="FNAF 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
       </div>
-      <div class="card-title">Happy Room</div>
-    </a><a href="Ink Game.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
-        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      <div class="card-title">FNAF 2</div>
+    </a><a href="Hanger 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
       </div>
-      <div class="card-title">Ink Game</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      <div class="card-title">Hanger 2</div>
+    </a><a href="Extreme Run 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
+        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
       </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Bouncemasters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+      <div class="card-title">Extreme Run 3D</div>
+    </a><a href="Get Yoked.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
+        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
       </div>
-      <div class="card-title">Bouncemasters</div>
-    </a><a href="Infinite Craft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
-        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
+      <div class="card-title">Get Yoked</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
       </div>
-      <div class="card-title">Infinite Craft</div>
-    </a><a href="Granny.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
-        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
+      <div class="card-title">Dreader</div>
+    </a><a href="Bloodmoney 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
-      <div class="card-title">Granny</div>
+      <div class="card-title">Bloodmoney 2</div>
+    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
+      </div>
+      <div class="card-title">Earth Taken</div>
+    </a><a href="Slope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
+        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
+      </div>
+      <div class="card-title">Slope</div>
+    </a><a href="Dunk Shot.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
+        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
+      </div>
+      <div class="card-title">Dunk Shot</div>
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
+      </div>
+      <div class="card-title">Vapmpire Survivors</div>
+    </a><a href="Clear Vision 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
+        <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 3</div>
     </a>
     </div>
   </div>
