--- a/Bloxorz.html
+++ b/Bloxorz.html
@@ -929,16 +929,6 @@ footer a:hover {
         <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
       </div>
       <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Cut the Rope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
-        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
-      </div>
-      <div class="card-title">Cut the Rope</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 5</div>
     </a><a href="Bob The Robber .html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
         <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
@@ -954,151 +944,161 @@ footer a:hover {
         <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
       </div>
       <div class="card-title">Bad Piggies</div>
-    </a><a href="FNAF 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
+    </a><a href="Cut the Rope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
+        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
       </div>
-      <div class="card-title">FNAF 1</div>
-    </a><a href="Helix Jump.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
-        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
+      <div class="card-title">Cut the Rope</div>
+    </a><a href="Bob The Robber 5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
       </div>
-      <div class="card-title">Helix Jump</div>
-    </a><a href="Slope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
-        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
-      </div>
-      <div class="card-title">Slope</div>
-    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
-        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
-      </div>
-      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
-    </a><a href="FNAF Sister Location.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
-      </div>
-      <div class="card-title">FNAF Sister Location</div>
+      <div class="card-title">Bob The Robber 5</div>
     </a><a href="Drift Hunters.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
         <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
       </div>
       <div class="card-title">Drift Hunters</div>
-    </a><a href="Hungry Lamu.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
-        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
+    </a><a href="Ages of Conflict.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
+        <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
       </div>
-      <div class="card-title">Hungry Lamu</div>
+      <div class="card-title">Ages of Conflict</div>
     </a><a href="Drive Mad.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
         <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
       </div>
       <div class="card-title">Drive Mad</div>
-    </a><a href="Friday Night Funkin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
-        <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin" loading="lazy">
+    </a><a href="Gold Digger FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
+        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
       </div>
-      <div class="card-title">Friday Night Funkin</div>
-    </a><a href="Bouncy Motors.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
-      </div>
-      <div class="card-title">Bouncy Motors</div>
-    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
-      </div>
-      <div class="card-title">Henry Stickmin Escaping The Prison</div>
-    </a><a href="Escape Road .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
-        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
-      </div>
-      <div class="card-title">Escape Road </div>
-    </a><a href="Elastic Face.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
-        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
-      </div>
-      <div class="card-title">Elastic Face</div>
-    </a><a href="Crazy Cattle 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Cattle 3D</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
-      </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="Clear Vision 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 2</div>
-    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
-        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
-      </div>
-      <div class="card-title">Burrito Bison Launcha Libre</div>
-    </a><a href="FNAF 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 4</div>
+      <div class="card-title">Gold Digger FRVR</div>
     </a><a href="Gun Spin.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
         <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
       </div>
       <div class="card-title">Gun Spin</div>
-    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
-        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
-      </div>
-      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
     </a><a href="Bounty of One.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
         <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
       </div>
       <div class="card-title">Bounty of One</div>
-    </a><a href="Going Balls.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
-        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+    </a><a href="Doki Doki Literature Club.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
+        <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
       </div>
-      <div class="card-title">Going Balls</div>
-    </a><a href="Burger and Frights.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
-        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+      <div class="card-title">Doki Doki Literature Club</div>
+    </a><a href="Idle Breakout.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
+        <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout" loading="lazy">
       </div>
-      <div class="card-title">Burger and Frights</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      <div class="card-title">Idle Breakout</div>
+    </a><a href="Capybara Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
       </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Fireboy and Watergirl 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
-        <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1" loading="lazy">
+      <div class="card-title">Capybara Clicker</div>
+    </a><a href="Dud.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dud/thumbnail.png')">
+        <img class="thumb" src="games/Dud/thumbnail.png" alt="Dud" loading="lazy">
       </div>
-      <div class="card-title">Fireboy and Watergirl 1</div>
-    </a><a href="Granny.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
-        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
+      <div class="card-title">Dud</div>
+    </a><a href="Dunk Shot.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
+        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
       </div>
-      <div class="card-title">Granny</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
+      <div class="card-title">Dunk Shot</div>
+    </a><a href="Cluster Rush.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cluster Rush/thumbnail.png')">
+        <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
       </div>
-      <div class="card-title">1v1.lol</div>
-    </a><a href="Grindcraft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
-        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
+      <div class="card-title">Cluster Rush</div>
+    </a><a href="1on1 Tennis.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.jpg')">
+        <img class="thumb" src="games/1on1 Tennis/thumbnail.jpg" alt="1on1 Tennis" loading="lazy">
       </div>
-      <div class="card-title">Grindcraft</div>
-    </a><a href="Bit Planes.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
-        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
+      <div class="card-title">1on1 Tennis</div>
+    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
       </div>
-      <div class="card-title">Bit Planes</div>
+      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
+    </a><a href="FNAF Sister Location.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Sister Location</div>
+    </a><a href="Bouncemasters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+      </div>
+      <div class="card-title">Bouncemasters</div>
+    </a><a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 3</div>
+    </a><a href="Henry Stickmin Infiltrating The Airship.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
+    </a><a href="Bitlife.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
+        <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
+      </div>
+      <div class="card-title">Bitlife</div>
+    </a><a href="Bouncy Motors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
+      </div>
+      <div class="card-title">Bouncy Motors</div>
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
+      </div>
+      <div class="card-title">Hungry Lamu</div>
+    </a><a href="Happy Room.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
+        <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
+      </div>
+      <div class="card-title">Happy Room</div>
+    </a><a href="Crossy Road.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
+        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
+      </div>
+      <div class="card-title">Crossy Road</div>
+    </a><a href="Infinite Craft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
+        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
+      </div>
+      <div class="card-title">Infinite Craft</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
+      </div>
+      <div class="card-title">Earth Taken</div>
+    </a><a href="Clear Vision 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 2</div>
+    </a><a href="Get Yoked.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
+        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
+      </div>
+      <div class="card-title">Get Yoked</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 4</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      </div>
+      <div class="card-title">Dreader</div>
     </a>
     </div>
   </div>
